[package]
name = "quantize"
version = "0.1.0"
edition = "2021"
description = "Quantize a RGBA image using libimagequant and returns a BGRA8888 Uint8Array for Javascript"
license = "GPL-3.0-or-later"
repository = "https://github.com/mondul/DTNo1ResPacker/tree/main/rust_quantize"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
imagequant = { version = "4.4.1", default-features = false }
console_error_panic_hook = "0.1"
